[package]
name = "retrommo-fetch"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT OR Apache-2.0"
description = "Wrapper around the RetroMMO API."
repository = "https://github.com/robertwayne/retrommo-fetch"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
